--- a/package.json
+++ b/package.json
@@ -1,17 +1,34 @@
 {
   "name": "yeemusik",
-  "version": "1.0.0",
-  "description": "woah",
+  "version": "1.3.4",
+  "description": "Music plugin for discord.js v11 bots",
   "main": "index.js",
+  "directories": {
+    "example": "examples"
+  },
+  "dependencies": {
+    "youtube-dl": "^1.11.1",
+    "ytdl-core": "^0.9.1"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nexu-dev/discord.js-music.git"
+  },
+  "keywords": [
+    "discord",
+    "discord.js",
+    "music",
+    "bot",
+    "plugin"
+  ],
+  "author": "Nexu",
   "license": "ISC",
-  "dependencies": {
-    "discord.js": "^11.2.1",
-    "fs": "0.0.1-security",
-    "request": "^2.83.0",
-    "ytdl-core": "^0.17.1"
-  }
+  "bugs": {
+    "url": "https://github.com/nexu-dev/discord.js-music/issues"
+  },
+  "homepage": "https://github.com/nexu-dev/discord.js-music#readme"
 }
